--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,10 +11,10 @@
         android:icon="@drawable/ic_add_box_black_24dp"
         android:title="Add Poll" />
 
-    <!--<item-->
-        <!--android:id="@+id/navigation_notifications"-->
-        <!--android:icon="@drawable/ic_notifications_black_24dp"-->
-        <!--android:title="@string/title_notifications" />-->
+    <item
+        android:id="@+id/navigation_notifications"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_notifications" />
 
     <item
         android:id="@+id/navigation_profile"
